--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-if": "^1.2.5",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "phaser": "^2.5.0",
+    "tsify": "^0.16.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.16.1"
   },
