--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser-es6-boilerplate",
+  "name": "Rupture-Vangaurd",
   "version": "1.0.2",
-  "description": "Tiny flexible template for writing Phaser games in ES6/ES2015 with Babel.",
+  "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "gulp",
@@ -9,12 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/belohlavek/phaser-es6-boilerplate"
+    "url": "https://github.com/MTareq/Rupture-Vangaurd"
   },
-  "author": "Daniel Belohlavek",
-  "license": "MIT",
+  "author": "mtareq",
   "devDependencies": {
-    "babelify": "^6.1.3",
     "browser-sync": "^2.8.0",
     "browserify": "^11.0.0",
     "del": "^1.2.0",
@@ -24,12 +22,11 @@
     "gulp-if": "^1.2.5",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "phaser": "^2.5.0",
     "tsify": "^0.16.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.16.1"
   },
   "dependencies": {
-    "phaser": "^2.4.1"
+    "phaser": "^2.5.0"
   }
 }
